kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    linkerd.io/inject: enabled
  name: mkdev

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-messer
  name: service-messer
  namespace: mkdev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: service-messer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: service-messer
    spec:
      containers:
      - image: public.ecr.aws/b7h6x5d9/service-messer:latest
        imagePullPolicy: Always
        name: service-messer
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 4567
          protocol: TCP
      serviceAccount: service-messer
      serviceAccountName: service-messer
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-messer
  name: service-messer
  namespace: mkdev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4567
  selector:
    app: service-messer
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-messer
  namespace: mkdev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-messer
                port:
                  number: 80
